--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -6,6 +6,7 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
+        add_header Access-Control-Allow-Origin *;
         root   /usr/share/nginx/arcgis;
         # index  index.html index.htm;
     }
