Added 301 redirect to dojo.js

--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -1,14 +1,15 @@
 server {
     listen       80;
     listen       [::]:80 default ipv6only=on;
-    server_name  localhost;
+    server_name  _;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    root   /usr/share/nginx/arcgis;
+
     location / {
         add_header Access-Control-Allow-Origin *;
-        root   /usr/share/nginx/arcgis;
-        # index  index.html index.htm;
+        rewrite ^/$ dojo/dojo.js permanent;
     }
 
     #error_page  404              /404.html;
