--- a/compose/default.conf
+++ b/compose/default.conf
@@ -23,4 +23,11 @@ server {
         proxy_set_header Host $host;
         proxy_pass http://arcgis-414/;
     }
+
+    location /4.15/ {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_pass http://arcgis-415/;
+    }
 }
