Updated nginx config.

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,11 +26,14 @@ http {
 
     sendfile        on;
     sendfile_max_chunk  1m;
+    send_timeout        10;
 
     tcp_nopush     on;
     tcp_nodelay    on;
 
-    keepalive_timeout  65;
+    keepalive_timeout   10; # Upstream LB timeout should be lower than this value.
+
+    types_hash_max_size 2048;
 
     gzip  on;
     # Enable compression both for HTTP/1.0 and HTTP/1.1 (required for CloudFront).
