--- a/compose/default.conf
+++ b/compose/default.conf
@@ -2,6 +2,16 @@ server {
     listen       8080;
     server_name  _;
 
+    charset utf-8;
+
+    server_tokens off;
+
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-Xss-Protection "1; mode=block";
+
+    location ~ /\. { deny all; }
+
     location /fonts/ {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
